fix footer on mobile screen

--- a/index.css
+++ b/index.css
@@ -94,5 +94,5 @@ button {
 }
 
 main {
-  grid-row: 2 / 3;
+  grid-row: 2 / -1;
 }
